Move abstract to report.tex

--- a/mas_report.cls
+++ b/mas_report.cls
@@ -116,4 +116,12 @@ of Master of Science in Autonomous Systems.}
 }
 
 
+%%%%%%%%%%%%%%%%%%%%%
+% Abstract
+%%%%%%%%%%%%%%%%%%%%%
+
+\newenvironment{abstract}{%
+\chapter*{Abstract}
+}
+
 \endinput
