--- a/report.tex
+++ b/report.tex
@@ -42,9 +42,11 @@ Third Supervisor
 % \printnoidxglossary[sort=word, type=acronym, title=List of Acronyms, toctitle=List of Acronyms] % sort=word]
 % \cleartoverso % Force a break to an even page
 
-% \begin{abstract}
-%
-% \end{abstract}
+
+\begin{abstract}
+Your abstract
+\end{abstract}
+
 
 
 \tableofcontents
