--- a/report.tex
+++ b/report.tex
@@ -48,6 +48,10 @@ Your abstract
 \end{abstract}
 
 
+\begin{acknowledgements}
+Thanks to ....
+\end{acknowledgements}
+
 
 \tableofcontents
 \listoffigures
