Change to supervisors in report.tex

--- a/report.tex
+++ b/report.tex
@@ -8,15 +8,13 @@
 \documentclass[thesis]{mas_report}
 % \usepackage{mas_report}
 
-\author{A. Ortega}
-
 % ****************************************************
 % THIS INFORMATION SHOULD BE UPDATED FOR YOUR REPORT
 % ****************************************************
 \author{Your Name}
 \title{Project title}
 \project{Master Thesis or R\&D Project}
-\supervisor{%
+\supervisors{%
 First supervisor\\
 Second Supervisor\\
 Third Supervisor
@@ -24,11 +22,10 @@ Third Supervisor
 \date{Month 20XX}
 
 \begin{document}
+
 \begin{titlepage}
     \maketitle
 \end{titlepage}
-
-
 
 
 %----------------------------------------------------------------------------------------
