Add statement page to report.tex

--- a/report.tex
+++ b/report.tex
@@ -40,6 +40,10 @@ Third Supervisor
 % \cleartoverso % Force a break to an even page
 
 
+
+\cleardoublepage
+\statementpage
+
 \begin{abstract}
 Your abstract
 \end{abstract}
