Add fancy chapter titles, headers and footers

--- a/report.tex
+++ b/report.tex
@@ -40,6 +40,8 @@ Third Supervisor
 % \cleartoverso % Force a break to an even page
 
 
+\pagestyle{plain}
+
 
 \cleardoublepage
 \statementpage
@@ -67,7 +69,7 @@ Thanks to ....
 \mainmatter % Begin numeric (1,2,3...) page numbering
 
 % \chapterstyle{thesis}
-% \pagestyle{mainmatter}
+\pagestyle{mainmatter}
 
 \include{chapters/ch01_introduction}
 \include{chapters/ch02_stateoftheart}
