Change thesis or R&D from manually written to package option

--- a/LastNameI-[RnD-MT]Report.tex
+++ b/LastNameI-[RnD-MT]Report.tex
@@ -6,14 +6,13 @@
 %
 
 \documentclass[thesis]{mas_report}
-% \usepackage{mas_report}
+% \documentclass[rnd]{mas_report}
 
 % ****************************************************
 % THIS INFORMATION SHOULD BE UPDATED FOR YOUR REPORT
 % ****************************************************
 \author{Your Name}
 \title{Project title}
-\project{Master Thesis or R\&D Project}
 \supervisors{%
 First supervisor\\
 Second Supervisor\\
