--- a/LastNameI-[RnD-MT]Report.tex
+++ b/LastNameI-[RnD-MT]Report.tex
@@ -70,13 +70,13 @@ Thanks to ....
 % \chapterstyle{thesis}
 \pagestyle{mainmatter}
 
-\include{chapters/ch01_introduction}
-\include{chapters/ch02_stateoftheart}
-\include{chapters/ch03_methodology}
-\include{chapters/ch04_solution}
-\include{chapters/ch05_evaluation}
-\include{chapters/ch06_results}
-\include{chapters/ch07_conclusion}
+\subfile{chapters/ch01_introduction}
+\subfile{chapters/ch02_stateoftheart}
+\subfile{chapters/ch03_methodology}
+\subfile{chapters/ch04_solution}
+\subfile{chapters/ch05_evaluation}
+\subfile{chapters/ch06_results}
+\subfile{chapters/ch07_conclusion}
 
 
 
@@ -87,7 +87,7 @@ Thanks to ....
 % \appendix
 
 \begin{appendices}
-\include{chapters/appendix}
+\subfile{chapters/appendix}
 
 \end{appendices}
 
