Add third party logo command for external supervisors

--- a/LastNameI-[RnD-MT]Report.tex
+++ b/LastNameI-[RnD-MT]Report.tex
@@ -20,6 +20,9 @@ Third Supervisor
 }
 \date{Month 20XX}
 
+
+% \thirdpartylogo{path/to/your/image}
+
 \begin{document}
 \begin{titlepage}
     \maketitle
