Fix missing geometry package

--- a/mas_report.cls
+++ b/mas_report.cls
@@ -54,6 +54,7 @@
 \usepackage[titletoc]{appendix}
 \usepackage{setspace}
 \usepackage{subfiles}
+\usepackage{geometry}
 % \usepackage{showframe}
 
 
