replaced subfile with include - makes it easier to navigate between chapters in texmaker

--- a/LastNameI-[RnD-MT]Report.tex
+++ b/LastNameI-[RnD-MT]Report.tex
@@ -63,13 +63,13 @@ Thanks to ....
 
 \pagestyle{mainmatter}
 
-\subfile{chapters/ch01_introduction}
-\subfile{chapters/ch02_stateoftheart}
-\subfile{chapters/ch03_methodology}
-\subfile{chapters/ch04_solution}
-\subfile{chapters/ch05_evaluation}
-\subfile{chapters/ch06_results}
-\subfile{chapters/ch07_conclusion}
+\include{chapters/ch01_introduction}
+\include{chapters/ch02_stateoftheart}
+\include{chapters/ch03_methodology}
+\include{chapters/ch04_solution}
+\include{chapters/ch05_evaluation}
+\include{chapters/ch06_results}
+\include{chapters/ch07_conclusion}
 
 
 %-------------------------------------------------------------------------------
@@ -77,7 +77,7 @@ Thanks to ....
 %-------------------------------------------------------------------------------
 
 \begin{appendices}
-\subfile{chapters/appendix}
+\include{chapters/appendix}
 
 \end{appendices}
 
