Added a 'frontmatter' directive so that the first pages have roman numerals

--- a/report.tex
+++ b/report.tex
@@ -25,6 +25,8 @@ Third Supervisor
 % \thirdpartylogo{path/to/your/image}
 
 \begin{document}
+\frontmatter
+
 \begin{titlepage}
     \maketitle
 \end{titlepage}
