Fix margins for double sided printing and binding

--- a/mas_report.cls
+++ b/mas_report.cls
@@ -25,9 +25,11 @@
 % Report options
 \DeclareOption{twosides}{
   \PassOptionsToClass{\CurrentOption}{book}
+  \PassOptionsToPackage{left=4cm,right=2cm}{geometry}
 }
 \DeclareOption{oneside}{
     \PassOptionsToClass{\CurrentOption}{book}
+    \PassOptionsToPackage{left=4cm,right=2cm, asymmetric}{geometry}
 }
 % Execute the default option
 \ExecuteOptions{thesis}
