Add packages to allow sub-figures, merged table cols and sideways figure

--- a/mas_report.cls
+++ b/mas_report.cls
@@ -58,6 +58,9 @@
 \usepackage{subfiles}
 \usepackage{geometry}
 % \usepackage{showframe}
+\usepackage{subcaption}	% Required for sub-figures
+\usepackage{multirow} % Required to enable merging of columns/rows in a table
+\usepackage{rotating} % Required to display sideways tables/figures
 
 
 \usepackage{lipsum} % Used to test
