--- a/report.tex
+++ b/report.tex
@@ -14,15 +14,29 @@
 % ****************************************************
 \author{Your Name}
 \title{Project title}
+% \phdsupervisor{PhD Student}
+% \phdproject{Title of PhD}
+
 \supervisors{%
 First supervisor\\
 Second Supervisor\\
-Third Supervisor
+\thephdsupervisor
 }
 \date{Month 20XX}
 
-
 % \thirdpartylogo{path/to/your/image}
+
+% If someone other than you has made direct, substantial contributions to your work, you must declare that here!
+% If you have questions about authorship criteria, please discuss this with your supervisor(s).
+% Uncomment this and edit as necessary:
+% \jointwork{%
+%   \begin{authorship}
+%     \caitem{\thephdsupervisor}{Conceptualization and supervision}
+%     \caitem{\theauthor, \thephdsupervisor}{Dataset collection with X Robot, Training of ML algorithm,}
+%     \caitem{\theauthor, Student2}{Data collection and postprocessing for experiment X}
+%   \end{authorship}
+% }
+
 
 \begin{document}
 \frontmatter
