--- a/report.tex
+++ b/report.tex
@@ -45,6 +45,9 @@ Second Supervisor\\
     \maketitle
 \end{titlepage}
 
+\cleardoublepage
+\copyrightpage{2020}
+
 %----------------------------------------------------------------------------------------
 %	PREFACE
 %----------------------------------------------------------------------------------------
