Add lmodern to remove font warnings

--- a/mas_report.cls
+++ b/mas_report.cls
@@ -71,6 +71,7 @@
 \usepackage{titling}
 
 \usepackage{lipsum} % Used to test
+\usepackage{lmodern}%
 
 \onehalfspacing
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
