--- a/report.tex
+++ b/report.tex
@@ -26,6 +26,11 @@ Second Supervisor\\
 
 % \thirdpartylogo{path/to/your/image}
 
+% Uncomment this to update the pdf metadata
+% \subject{LaTeX testing}
+% \keywords{key1; key2; key3}
+
+
 % If someone other than you has made direct, substantial contributions to your work, you must declare that here!
 % If you have questions about authorship criteria, please discuss this with your supervisor(s).
 % Uncomment this and edit as necessary:
