Add instructions for phd project commands
This commit also comments out phd project commands
to make the default report as the previous version.

--- a/report.tex
+++ b/report.tex
@@ -14,13 +14,21 @@
 % ****************************************************
 \author{Your Name}
 \title{Project title}
+
+% Please note that the \phdsupervisor command is optional, and is usually
+% used when your research is done in the context of a PhD project.
+% The command updates the report copyright to include your supervisor; if, on the other hand, the \phdsupervisor is not used or is empty, the copyright includes only the student.
+% If this is not the case, you can always manually include your supervisors' name.
+% If you have questions on whether this applies to your project, get in touch with your supervisor!
+% After filling \phdsupervisor, you can use \thephdsupervisor in the report, e.g. in the title or to specifiy joint work. Make sure you spell it correctly!
 % \phdsupervisor{PhD Student}
 % \phdproject{Title of PhD}
 
 \supervisors{%
 First supervisor\\
 Second Supervisor\\
-\thephdsupervisor
+Third Supervisor
+% \thephdsupervisor
 }
 \date{Month 20XX}
 
