[report.tex] Use IEEEtran as a bibliography style

--- a/report.tex
+++ b/report.tex
@@ -103,7 +103,7 @@ Third Supervisor
 %	BIBLIOGRAPHY
 %-------------------------------------------------------------------------------
 \addcontentsline{toc}{chapter}{References}
-\bibliographystyle{plainnat} % Use the plainnat bibliography style
-\bibliography{bibliography.bib} % Use the bibliography.bib file as the source of references
+\bibliographystyle{IEEEtran}
+\bibliography{bibliography} % Use the bibliography.bib file as the source of references
 
 \end{document}
