Resolves #15 (incorrect link for reference list)

--- a/mas_report.cls
+++ b/mas_report.cls
@@ -63,6 +63,7 @@
 \usepackage{rotating} % Required to display sideways tables/figures
 \usepackage{hyperref} % Enable hyperlinks
 \usepackage{titling}
+\usepackage{tocbibind}
 
 \usepackage{lipsum} % Used to test
 \usepackage{lmodern}%
