[report.tex] Returned the lists of figures and tables, but they're commented out by default
After discussing this with Santosh, we agreed that it might be better to
have the commands in the document so that they can be easily enabled if
desired

--- a/report.tex
+++ b/report.tex
@@ -73,6 +73,13 @@ Third Supervisor
 
 \tableofcontents
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Uncomment one or both of the following two lines if you want to have
+% a list of figures and/or tables displayed in the report
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \listoffigures
+% \listoftables
+
 %-------------------------------------------------------------------------------
 %	CONTENT CHAPTERS
 %-------------------------------------------------------------------------------
